Fixed alignment of the TPL header.

--- a/tpl/css/tpl.css
+++ b/tpl/css/tpl.css
@@ -3,6 +3,6 @@
 .content h1.tpl {
     font-size : 64pt;
     margin : 0px;
-    margin-bottom : -25px;
+    margin-bottom : -10;
     font-family : Megrim, "Maven Pro", Verdana, Arial, Helvetica, sans-serif;
 }
